--- a/objetivos/Davidj231996.md
+++ b/objetivos/Davidj231996.md
@@ -54,3 +54,4 @@ durante la asignatura.
 - [x] Creación MV con Azure.
 - [x] Despliegue y ejecución de la aplicación automáticos.
 - [x] Documentación.
+- [x] Mejorar Vagrantfile, Ansible y Fabric.
