Actualización objetivos para la convocatoria extraordinaria

--- a/objetivos/Davidj231996.md
+++ b/objetivos/Davidj231996.md
@@ -55,4 +55,4 @@ durante la asignatura.
 - [x] Despliegue y ejecución de la aplicación automáticos.
 - [x] Documentación.
 - [x] Mejorar Vagrantfile, Ansible y Fabric.
-- [ ] Reenvios de la Convocatoria Extraordinaria.
+- [ ] Reenvios de la convocatoria extraordinaria.
